# create-app-kit

./: .gitignore  README.md  package.json
configs/common/: .gitignore
configs/common/.github/workflows/: ci.yml
configs/linter/biome/: deps.json
configs/linter/eslint/: .eslintrc.cjs  .prettierignore  .prettierrc  deps.json
templates/react-web2/: .gitignore  README.md  biome.json  package.json  tailwind.config.js  template.json  tsconfig.json
templates/react-web2/public/: index.html
templates/react-web2/src/: App.tsx  index.tsx  styles.css  wdyr.ts
templates/react-web2/src/components/: AppBackground.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx  ThemeToggle.tsx
templates/react-web2/src/hooks/: useTheme.ts  useWorker.ts
templates/react-web2/src/mocks/: courses.ts  graphql.ts  index.ts
templates/react-web2/src/providers/: queryProvider.tsx
templates/react-web2/src/routes/: config.tsx  index.tsx
templates/react-web2/src/services/: useCourses.ts
templates/react-web2/src/stores/: appStore.ts  socketStore.ts  studyStore.ts
templates/react-web2/src/themes/: index.ts
templates/react-web2/src/types/: env.d.ts  stats.d.ts
templates/react-web2/src/utils/: performanceTool.ts  request.ts  socket.ts
templates/react-web3/: README.md  components.json  cypress.config.ts  package.json  template.json  tsconfig.json  vitest.config.ts
templates/react-web3/public/: index.html
templates/react-web3/src/: App.tsx  index.tsx  styles.css
templates/react-web3/src/config/: wagmi.ts
templates/react-web3/wasm/: Cargo.toml
templates/react-web3/wasm/src/: lib.rs
(+70 files in other folders)
