[package]
name = "compute-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly compute module for React app"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# 用于更好的错误信息
console_error_panic_hook = { version = "0.1", optional = true }

# 用于操作 Web API（可选）
[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "ImageData",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# 优化体积
opt-level = "s"
lto = true

[features]
default = ["console_error_panic_hook"]
